[Parse] Fix #sourceLocation parsing in Decl position (#10444)

Fixes: https://bugs.swift.org/browse/SR-5242
`#sourceLocation` directive at end of declaration list postion was
rejected.